--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -168,15 +168,16 @@ page-home {
     /* close commented backslash hack */
     .chatImg {
         display: inline-block;
-        width: 200px;
+        width: 250px;
         padding: 3px;
         border: 1px solid #DDD;
         background: #FFF;
         box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
         opacity: 0.5;
+		border-radius:5px;
         img {
             margin: auto;
-            max-width: 200px;
+            max-width: 250px;
             /*opacity: 0.2;*/
 			height: 150px;
 			width: 100%;
